debut nettoyage + type : int -> String + définition des types actuels dans le readme + preparation base pour gérer types dans Tuit'o